# drlhp

./: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  pyproject.toml  requirements.txt
drlhp/: 1_simple_pg.py  comms.py  config.py  models.py  mp_example.py  ppo.py  reward_predictor.py  run.py  utils.py
drlhp/agents/: __init__.py  dqn_agent.py
drlhp/configs/: dqn.yaml  dqn_fixed_target.yaml
drlhp/envs/: util.py
drlhp/envs/gym_moving_dot/: __init__.py  moving_dot_env.py
drlhp/gym_moving_dot/: __init__.py  moving_dot_env.py
drlhp/human/: loop.py
drlhp/human/web_interface/: app.py  img_utils.py
drlhp/human/web_interface/templates/: index.html
drlhp/pm/: loop.py
drlhp/policy/: config.py  ppo.py
drlhp/utils/: logging.py  optimizer.py  utils.py
drlhp/web_interface/: app.py
drlhp/web_interface/templates/: index.html
tests/: test_hopper.py  test_moving_dot_env.py
