[project]
name = "drlhp"
version = "0.0.1"
description = "Implementation of Deep Reinforcement Learning From Human Preferences"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "gymnasium@git+https://github.com/Farama-Foundation/Gymnasium",
    "mujoco",
    "pandas",
    "black",
    "torch",
    "tensorboard",
    "Fire",
    "pre-commit",
    "flake8",
    "ruff",
    "pydantic",
    "pytest",
    "Flask",
    "streamlit",
    "slist",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.1",
    "pyright>=1.1.3",
    "pre-commit",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["drlhp"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.pyright]
include = ["drlhp", "tests"]

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportFunctionMemberAccess = true
reportUnknownParameterType = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructorType = true
reportOverlappingOverload = true
reportConstantRedefinition = true
reportImportCycles = true
reportPropertyTypeMismatch = true
reportMissingTypeArgument = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnusedExpression = true
reportMatchNotExhaustive = true
reportShadowedImports = true
reportPrivateImportUsage = false